--- a/source/_assets/stylesheets/_layout.scss
+++ b/source/_assets/stylesheets/_layout.scss
@@ -15,7 +15,8 @@
 }
 
 .section-content {
-	padding: 0 15px;
+	padding-left: 15px;
+	padding-right: 15px;
 }
 
 .section-content h3,
@@ -37,11 +38,12 @@
 }
 
 .section-content .right-column {
-	padding: 5px 0 5px 10px;
+	padding: 5px 0 5px 15px;
 }
 
 .spacing-top {
-	padding: 10px 0 5px;
+	padding-bottom: 5px;
+	padding-top: 10px;
 }
 
 .spacing {
