--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -412,8 +412,41 @@
                 <img src="http://placehold.it/75x75" align="right" width="75" height="75" alt="Placeholder image" class="spacing-top mFullImage">
               </td>
             </tr>
+            <tr>
+              <td class="right-column mWidth">
+                <table border="0" cellspacing="0" cellpadding="0" width="100%" class="mWidth">
+                  <tr>
+                    <td class="separator mWidth">
+                    </td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+            <tr>
+              <td class="spacing-top right-column mWidth">
+                <table cellpadding="0" cellspacing="0" border="0" class="mWidth" align="left" width="140">
+                  <tr>
+                    <td class="mWidth">
+                      <p class="event-title"><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></p>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </td>
+                  </tr>
+                </table>
+                <img src="http://placehold.it/75x75" align="right" width="75" height="75" alt="Placeholder image" class="spacing-top mFullImage">
+              </td>
+            </tr>
             <!-- End text and photo -->
             <!-- Photo only -->
+            <tr>
+              <td class="right-column mWidth">
+                <table border="0" cellspacing="0" cellpadding="0" width="100%" class="mWidth">
+                  <tr>
+                    <td class="separator mWidth">
+                    </td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
              <tr>
               <td class="spacing-top right-title right-column mWidth">
                 <h3>Section Title</h3>
@@ -431,6 +464,21 @@
         </td>
       </tr>
       <!-- END TWO COLUMNS -->
+
+      <!-- FULL COLUMN 50/50 -->
+      <tr>
+        <td class="section-content spacing-top mWidth">
+          <img src="http://placehold.it/250x185" align="left" width="250" height="185" alt="Placeholder image" class="mFullImage">
+          <table align="right" cellpadding="0" cellspacing="0" border="0" class="mWidth" width="335">
+            <tr>
+              <td class="mWidth">
+                <h3><a href="#">Neque porro quisquam est qui dolorem ipsum quia</a></h3>
+              </td>
+            </tr>
+          </table>
+        </td>
+      </tr>
+      <!-- END FULL COLUMN 50/50 -->
 
   	</table>
   </body>
